<resources>
    <string name="blank" />

    <string name="app_name">Vianderito</string>
    <string name="tagline">No more punching</string>
    <string name="get_started">Get Started</string>

    <string name="document">Document</string>

    <string name="sign_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="verify">Verify</string>

    <string name="name">Name</string>
    <string name="email">Email Address</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="sms_code">SMS Code</string>

    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="postal_code">Postal Code</string>

    <string name="sms_verification">SMS</string>
    <string name="email_verification">Email</string>

    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>

    <string name="profile_updated">Your profile has been updated</string>
    <string name="confirm_password_not_match">New password does not match.</string>
    <string name="password_updated">Your new password has been set</string>

    <string name="create_account">Create Account</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="reset_token">Reset Token</string>
    <string name="resend_sms">Resend Code</string>
    <string name="next">Next</string>
    <string name="next_other">Continue</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="close">Close</string>
    <string name="add">Add</string>

    <string name="store">Store</string>
    <string name="cart">Cart</string>
    <string name="account">Account</string>

    <string name="invalid_coupon">Invalid Coupon</string>
    <string name="apply">Apply</string>
    <string name="remove">Remove</string>

    <string name="total">Total</string>
    <string name="pay">Pay</string>

    <string name="retry">Retry</string>
    <string name="error">Error</string>
    <string name="delete">Delete</string>
    <string name="discard">Discard</string>
    <string name="discard_cart">Discard Cart</string>

    <string name="login_expired">Login Expired</string>
    <string name="login_expired_message">Your login session has been expired. Please login again.</string>

    <string name="have_a_coupon_code">Have a coupon code? Enter it here</string>

    <string name="discard_cart_confirmation">Are you sure you want to discard this cart?</string>

    <string name="transaction_not_found">Cannot find transaction from the scanned code</string>

    <string name="no_payment_method">
        No payment method saved on account. Please add one first to complete your transaction.
    </string>

    <string name="no_payment_method_alt">
        No payment method saved on account. Add a payment method now to make your next purchase easier.
    </string>

    <string name="completed">Completed</string>

    <string name="purchase">Purchase</string>
    <string name="n_items">%d items</string>

    <plurals name="n_items">
        <item quantity="one">%d item</item>
        <item quantity="other">%d items</item>
    </plurals>

    <string name="display_date">%tb %td, %tY %tl:%tM %tp</string>

    <string name="amount_to_pay">Amount To Pay</string>
    <string name="pay_using">Pay Using</string>

    <string name="add_payment_method">Add Payment Method</string>
    <string name="view_payment_method">View Payment Method</string>

    <string name="camera_permission_rationale">
        Vianderito needs permission to use the camera to scan the QR code.
    </string>

    <string name="cart_empty_message">
        The cart you scanned is empty. Please put items first then scan again.
    </string>

    <string name="no_payment_method_available">
        There is no payment method available. Do you want to add one first?
    </string>

    <string name="confirm_payment">Confirm Payment</string>

    <string name="confirm_payment_from_method">
        Confirm payment of P%.2f using card %s?
    </string>

    <string name="payment_error">Payment Error</string>

    <string name="transaction_complete">Transaction Complete</string>

    <string name="transaction_complete_message">
        Thank you for purchasing with Vianderito!
    </string>

    <string name="customer_information">Customer Information</string>

    <string name="edit_payment_method">Edit Payment Method</string>
    <string name="delete_payment_method">Delete Payment Method</string>

    <string name="card_holder_information">Card Holder Information</string>

    <string name="logout_confirm_message">Are you sure you want to logout of your account?</string>

    <string name="cart_welcome_message">
        Tap the screen to scan QR code
    </string>

    <string name="delete_payment_method_confirm_message">
        Are you sure you want to remove this payment method from your account?
    </string>

    <string name="password_reset_completed_description">
        Your new password to your account has been successfully set. You may now login to your account.
    </string>

    <string name="forgot_password_description">
        You may request a password change with the phone number or email address used in your account.
    </string>

    <string name="reset_token_description">
        Please enter the password reset token that was sent to your email.
    </string>

    <string name="change_password_description">
        Enter a new password for your account
    </string>

    <string name="profile_edit_permission_request">
        Vianderito requires access to storage
    </string>

    <string name="credit_card_number_error">Invalid card number</string>
    <string name="credit_card_expiration_error">Invalid card expiration date</string>
    <string name="credit_card_added">The card has been successfully added to your account</string>

    <string name="upload">Upload</string>
    <string name="upload_picture">Upload Picture</string>

    <string name="verify_phone_message">
        To start using Vianderito, please verify your phone number by entering the
        code that was sent to %1$s.
    </string>

    <string name="signup_agreement_message">
        By signing up, you agree to Terms of Service
        and acknowledge our Privacy Policy.
    </string>

    <string name="client_token_obtain_fail">Failed to obtain client token from the server.</string>

    <string name="menu_image">Menu Image</string>
    <string name="product_image">Product Image</string>
    <string name="proceed">Proceed</string>
    <string name="peso_price">P%.2f</string>
    <string name="peso_price_with_quantity">%d x P%.2f</string>
    <string name="peso_price_discounted_with_quantity">%d x P%.2f (orig P%.2f)</string>
    <string name="out_of_stock">Out of stock</string>
    <string name="search">Search</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="all">All</string>

    <string name="my_account">My Account</string>
    <string name="change_password">Change Password</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="order_history">Order History</string>
    <string name="view_order">View Order</string>

    <string name="last_login">Last Login</string>
    <string name="not_set">Not Set</string>

    <string name="terms_of_service">Terms of Service</string>
    <string name="privacy_policy">Privacy Policy</string>
</resources>
