<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />

        <import type="com.raphaelmarco.vianderito.activity.password.PasswordResetChangeActivity" />

        <variable
            name="ui"
            type="com.raphaelmarco.vianderito.activity.password.PasswordResetChangeActivity.UiData" />

        <variable
            name="reset"
            type="com.raphaelmarco.vianderito.binding.passwordreset.ResetPasswordChangeData" />

        <variable
            name="validationError"
            type="com.raphaelmarco.vianderito.binding.ValidationErrorData" />
    </data>

    <RelativeLayout
        tools:context=".activity.password.PasswordResetChangeActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true">

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:id="@+id/progress_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-6dp"
            android:elevation="1dp"
            android:indeterminate="true"
            android:fitsSystemWindows="true"
            android:visibility="@{ui.isLoading ? View.VISIBLE : View.GONE}" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="100dp"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:visibility="@{ui.screen == PasswordResetChangeActivity.SCREEN_TOKEN ? View.VISIBLE : View.GONE}">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset_token"
                android:textColor="#fff"
                android:textSize="36sp"
                android:layout_marginBottom="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset_token_description"
                android:textColor="@color/white"
                android:layout_marginBottom="30dp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/secondary">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="#fff"
                    android:text="@={reset.token}"
                    android:hint="@string/reset_token" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_gravity="end"
                android:text="@string/next"
                android:stateListAnimator="@null"
                android:background="@drawable/button_sign_in"
                android:textColor="#fff"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="100dp"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:visibility="@{ui.screen == PasswordResetChangeActivity.SCREEN_CHANGE_PASSWORD ? View.VISIBLE : View.GONE}">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_password"
                android:textColor="#fff"
                android:textSize="36sp"
                android:layout_marginBottom="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_password_description"
                android:textColor="@color/white"
                android:layout_marginBottom="30dp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/red"
                android:layout_marginBottom="15dp"
                android:padding="15dp"
                android:visibility="@{validationError.isMessageAvailable ? View.VISIBLE : View.GONE}">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@{validationError.message}" />
            </FrameLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/secondary">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="#fff"
                    android:text="@={reset.newPassword}"
                    android:hint="@string/new_password"
                    android:enabled="@{ui.isFormEnabled}"
                    app:error='@{validationError.errors["new_password"]}' />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/secondary">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="#fff"
                    android:text="@={reset.confirmPassword}"
                    android:hint="@string/confirm_password"
                    android:enabled="@{ui.isFormEnabled}"
                    app:error="@{reset.isConfirmPasswordCorrect ? null : @string/confirm_password_not_match}" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_change_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/change_password"
                android:stateListAnimator="@null"
                android:background="@drawable/button_sign_in"
                android:textColor="#fff"
                android:enabled="@{reset.isSubmittable}"
                android:alpha="@{reset.isSubmittable ? 1.0f : 0.5f}" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="100dp"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:visibility="@{ui.screen == PasswordResetChangeActivity.SCREEN_COMPLETED ? View.VISIBLE : View.GONE}">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/completed"
                android:textColor="#fff"
                android:textSize="36sp"
                android:layout_marginBottom="30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_reset_completed_description"
                android:textColor="@color/white"
                android:layout_marginBottom="50dp" />

            <Button
                android:id="@+id/btn_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_gravity="end"
                android:text="@string/login"
                android:stateListAnimator="@null"
                android:background="@drawable/button_sign_in"
                android:textColor="#fff" />
        </LinearLayout>
    </RelativeLayout>
</layout>