<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data class="FragmentSignupBinding">
        <variable
            name="ui"
            type="com.raphaelmarco.vianderito.SignupFragment.UiData" />
        <variable
            name="user"
            type="com.raphaelmarco.vianderito.binding.SignUpData" />
        <variable
            name="validationError"
            type="com.raphaelmarco.vianderito.binding.ValidationErrorData" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primaryDarkerGetStarted"
        tools:context=".SignupFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="200dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textColor="#fff"
                android:textSize="36sp"
                android:layout_marginBottom="30dp"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/secondary">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#fff"
                    android:inputType="textPersonName"
                    android:text="@={user.name}"
                    android:hint="@string/name"
                    android:enabled="@{ui.isFormEnabled}"
                    app:error='@{validationError.errors["name"]}' />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/secondary">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#fff"
                    android:inputType="textEmailAddress"
                    android:text="@={user.username}"
                    android:hint="@string/username"
                    android:enabled="@{ui.isFormEnabled}"
                    app:error='@{validationError.errors["username"]}'/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/secondary">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="#fff"
                    android:text="@={user.password}"
                    android:hint="@string/password"
                    android:enabled="@{ui.isFormEnabled}"
                    app:error='@{validationError.errors["password"]}'/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/secondary">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:textColor="#fff"
                    android:text="@={user.phoneNumber}"
                    android:hint="@string/phone_number"
                    android:enabled="@{ui.isFormEnabled}"
                    app:error='@{validationError.errors["phone_number"]}'/>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/next"
                android:stateListAnimator="@null"
                android:background="@drawable/button_sign_in"
                android:enabled="@{ui.isFormEnabled}"
                android:textColor="#fff"/>
        </LinearLayout>

    </ScrollView>
</layout>