<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="ui"
            type="com.raphaelmarco.vianderito.activity.SmsVerifyActivity.UiData" />
        <variable
            name="validationError"
            type="com.raphaelmarco.vianderito.binding.ValidationErrorData" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primaryGetStarted"
        tools:context=".activity.SmsVerifyActivity">

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:id="@+id/progress_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-5dp"
            android:elevation="1dp"
            android:indeterminate="true"
            android:fitsSystemWindows="true"
            android:visibility="invisible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="100dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/verify"
                android:textColor="#fff"
                android:textSize="36sp"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/verify_phone_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:text="@string/verify_phone_message"
                android:textColor="@color/tertiary" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/secondary">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/sms_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#fff"
                    android:inputType="number"
                    android:hint="@string/sms_code"
                    android:enabled="@{ui.isFormEnabled}"
                    app:error='@{validationError.message}' />
            </android.support.design.widget.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/resend_sms_link"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/resend_sms"
                    android:layout_centerVertical="true"
                    android:padding="10dp"
                    android:textColor="#fff"
                    android:enabled="@{ui.isFormEnabled}"
                    android:textAlignment="center" />

                <Button
                    android:id="@+id/btn_continue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="@string/next_other"
                    android:stateListAnimator="@null"
                    android:enabled="@{ui.isFormEnabled}"
                    android:background="@drawable/button_sign_in"
                    android:textColor="#fff"/>
            </RelativeLayout>
        </LinearLayout>

    </RelativeLayout>
</layout>